adding machine mind header

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <section>
         <h1>Mentalism</h1>
       </section>
+      <section>
+        <h1>Machine Mind</h1>
+      </section>
     <section id="img1"> 
       <img src="img/humanityMind.jpg">
     </section>
