adding to motivation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section>
       <h1>Motivation</h1>
       <p>
-        Eighteen years have passed since I have lost the ability to ease into a learning flow-state. The purpose of this webpage is to combine the software engineering learning process with providing various mental/consciosness improvement concepts which have been found by more intelligent humans than I.</p>
+        Eighteen years have passed since I have lost the ability to ease into a learning flow-state. The purpose of this webpage is to combine the software engineering learning process with providing various mental/consciosness improvement concepts which have been found by more intelligent humans than I. Questions revolving around the importance of the human experience and the differences between the journey and the destination shall be documented. I will not psychoanalyze my own renderings as the process of research and dictation will be slowed.</p>
         <img src="img/uinversalMind.jpg">
       </section>
      <section>
