added a dropdown menu button for future pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <header>
       <img src="img/mindsphere.jpg" class="header-item">
       <h1>Mastering My Mind</h1>
+      <div class="dropdown">
+        <button class="dropbtn">Portals</button>
+          <div class="dropdown-content">
+            <a href="#">Metaphysical</a>
+            <a href="#">Mysticism</a>
+            <a href="#">Mind Palace</a>
+            <a href="#">Mentalism</a>
+            <a href="#">Machine Mind</a>
+          </div>
+      </div>
     </header>
     <main>
       <section>
@@ -16,7 +26,10 @@
         Eighteen years have passed since I have lost the ability to ease into a learning flow-state. The purpose of this webpage is to combine the software engineering learning process with providing various mental/consciosness improvement concepts which have been found by more intelligent humans than I. Questions revolving around the importance of the human experience and the differences between the journey and the destination shall be documented. I will not psychoanalyze my own renderings as the process of research and dictation will be slowed.</p>
         <img src="img/uinversalMind.jpg">
       </section>
-     <section>
+      <section>
+        <h1>Metaphysical</h1>
+      </section>
+      <section>
       <h1>Mysticism</h1>
       <p></p>
       </section>
@@ -28,6 +41,11 @@
       </section>
       <section>
         <h1>Machine Mind</h1>
+        <h2>Philosophy</h2>
+        <ol>
+          <li>Ghost in the Shell</li>
+          <p>"...like a dim reflection in the mirror, then we will be face to face..."</p>
+        </ol>
       </section>
     <section id="img1"> 
       <img src="img/humanityMind.jpg">
