added links to dropdown menu and quotes to Machine Mind/Philosophy.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <div class="dropdown">
         <button class="dropbtn">Portals</button>
           <div class="dropdown-content">
-            <a href="#">Metaphysical</a>
-            <a href="#">Mysticism</a>
-            <a href="#">Mind Palace</a>
-            <a href="#">Mentalism</a>
-            <a href="#">Machine Mind</a>
+            <a href="metaphysical.html">Metaphysical</a>
+            <a href="mysticism.html">Mysticism</a>
+            <a href="mindPalace.html">Mind Palace</a>
+            <a href="mentalisms.html">Mentalism</a>
+            <a href="machineMind.html">Machine Mind</a>
           </div>
       </div>
     </header>
@@ -45,10 +45,22 @@
       </section>
       <section>
         <h1>Machine Mind</h1>
-        <h2>Philosophy</h2>
+        <h3>Philosophy</h3>
         <ol>
           <li>Ghost in the Shell</li>
-          <p>"...like a dim reflection in the mirror, then we will be face to face..."</p>
+            <ul>
+              <li>"...like a dim reflection in the mirror, then we will be face to face..."<li>
+            </ul>
+          <li>Ghost in the Shell 2: Innocence</li>
+            <ul>
+              <li>"...an object built by an individual is as much an expression of the builder's genetic phenotype as the builder himself..." </li>
+              <li>"If life's true nature is information passed down via genes then society and civilization are nothing more than giant memory systems. That would make cities huge, external memory devices."</li>
+              <li>"...without lies there can be no truths..."</li>
+              <li>"...the inherent flaws in man's knowledge lead to flaws in man's reality. That type of perfection can only be achieved by something that posesses no consciousness or (posesses) infinite consciousness..."</li>
+              <li>"...it's the fear that the human phenomenon is fundamentally devoid of meaning and purpose...the belief that nature is quantifiable leads to the hypothetical conclusion that humanity can also be reduced to simple mechanical components."</li>
+              <li>"The human body is a machine which winds it's own springs."</li>
+              <li>"There are few who can hold up a mirror and not become evil. A mirror does not expose evil. Rather, it creates it...In short, mirrors ought to be merely glanced at, not stared at." </li>
+            </ul>
         </ol>
       </section>
     <section id="img1"> 
