attempting to define metaphysical as foundation for understanding utilization of mind altering techniques

--- a/metaphysical.html
+++ b/metaphysical.html
@@ -6,9 +6,18 @@
   <body>
     <header>
       <h1>Metaphysical</h1>
+      <p>the science of what is beyond the physical</p>
+        <ul>
+          <li>Meta</li>
+            <ol> 
+              <li>Greek: among, with, after, more comprehensive, transcending</li>
+              <li>Contemporary: an x about x</li>
+            </ol>
+        </ul>
     </header>
     <main>
-      
+      <h1>what</h1>
+        <p>Meta began with the Greeks and was utilized as a means to describe something that comes after. A claim that Aristotle's <em>Metaphysics</em> was named thus because it was the book which he wrote following <em>Physics</em>.<br> Since then, metaphysics has been understood as <em>the study of that which is beyond or not physical</em>. </p>
     </main>
   </body>
 </html>
