--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Mindstate Mastery</title>
     <link href="style.css" rel="stylesheet">
+
   </head>
   <body>
     <header>
@@ -71,5 +72,6 @@
     <footer>
       
     </footer>
+    <script src="app.js"></script>
   </body> 
 </html>
