fixed mind escaping body concept.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </section>
       <section>
         <h1>Stream of Consciousness</h1>
-        <p>The possibility of one's consciousness breeching the walls of material confinement. What would it take for an individual to stretch his mind from his body? <br> I believe this concept is called "astral projection". Is this the same concept though? Is the astral realm the same as the material? Or is there a veil which separates material, etherial, astral. <br> What are the differences? If one's consciousness can be aware of the material world at distances far from his/her grounding point (aka:his/her body) then are the realms all connected, vibrating at slightly differing frequencies? <br> Also, how do any of these blithering questions deal with <em>Mastering the Mind</em>?</p>
+        <p>The possibility of one's consciousness breeching the walls of material confinement. What would it take for an individual to stretch his mind from his body? <br> I believe this concept is called "astral projection". Is this the same concept though? Is the astral realm the same as the material? Or is there a veil which separates material, etherial, astral. <br> What are the differences? If one's consciousness can be aware of the material world at distances far from his/her grounding point (aka:his/her body) then are the realms all connected, vibrating at slightly differing frequencies? <br> What I was looking for was <b>remote viewing</b>.<br> Also, how do any of these blithering questions deal with <em>Mastering the Mind</em>?</p>
       </section>
       <section>
         <h1>Metaphysical</h1>
