forgot to commit after previous edits...not much accomplished

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img src="img/mindsphere.jpg" class="header-item">
+      <img src="img/mindsphere.jpg" class="header-item" alt="Mind in Sphere">
       <h1>Mastering My Mind</h1>
       <div class="dropdown">
         <button class="dropbtn">Portals</button>
@@ -17,6 +17,7 @@
             <a href="mindPalace.html">Mind Palace</a>
             <a href="mentalisms.html">Mentalism</a>
             <a href="machineMind.html">Machine Mind</a>
+            <a href="movies.html">Movies</a>
           </div>
       </div>
     </header>
@@ -24,7 +25,7 @@
       <section>
       <h1>Motivation</h1>
       <p>
-        Eighteen years have passed since I lost the ability to ease into a learning flow-state. The purpose of this webpage is to combine the software engineering learning process with providing various mental/consciosness improvement concepts which have been found by more intelligent humans than I. Questions revolving around the importance of the human experience and the differences between the journey and the destination shall be documented. I will not psychoanalyze my own renderings as the process of research and dictation will be slowed.</p>
+        <em>Becoming the change self wishes to see.</em> <br><br> The purpose of this webpage is to combine the software engineering learning process with providing various mental/consciosness improvement concepts which have been found by more intelligent humans than I. Questions revolving around the importance of the human experience and the differences between the journey and the destination shall be documented.<br><br>Is laying out a purpose important to the functionality of what is being created?<br><br> What is this experience of life meant to achieve? </p>
         <img src="img/uinversalMind.jpg">
       </section>
       <section>
@@ -36,7 +37,24 @@
       </section>
       <section>
       <h1>Mysticism</h1>
-      <p></p>
+      <h3>Hermeticism</h3>
+      <p>This philosophy claims seven fundamental rules for the understanding of reality.</p>
+      <ol>
+        <li>Mentalism</li>
+          <p>The ALL is Mind; the Universe is Mental</p>
+        <li>Correspondence</li>
+          <p>As above, so below; as below, so above</p>
+        <li>Vibration</li>
+          <p>Nothing rests; everything moves; everything vibrates</p>
+        <li>Polarity</li>
+          <p>Everything is Dual; everything has poles; everything has its pair of opposites; like and unlike are the same; opposites are identical in nature, but different in degree; extremes meet; all truths are but half truths; all paradoxes may be reconciled</p>
+        <li>Rhythm</li>
+          <p>Everything flows, out and in; everything has its tides; all things rise and fall; the pendulum-swing manifests in everything; the measure of the swing to the right is the measure of the swing to the left; rhythm compensates</p>
+        <li>Cause and Effect</li>
+          <p>Every Cause has its Effect; every Effect has its Cause; everything happens according to Law; Chance is but a name for Law not recognized; there are many planes of causation, but nothing escapes the Law</p>
+        <li>Gender</li>
+          <p>Gender is in everything; everything has its Masculine and Feminine Principles; Gender manifests on all planes</p>
+      </ol>
       </section>
       <section>
         <h1>Mind Palace</h1>
@@ -47,22 +65,10 @@
       <section>
         <h1>Machine Mind</h1>
         <h3>Philosophy</h3>
-        <ol>
-          <li>Ghost in the Shell</li>
-            <ul>
-              <li>"...like a dim reflection in the mirror, then we will be face to face..."<li>
-            </ul>
-          <li>Ghost in the Shell 2: Innocence</li>
-            <ul>
-              <li>"...an object built by an individual is as much an expression of the builder's genetic phenotype as the builder himself..." </li>
-              <li>"If life's true nature is information passed down via genes then society and civilization are nothing more than giant memory systems. That would make cities huge, external memory devices."</li>
-              <li>"...without lies there can be no truths..."</li>
-              <li>"...the inherent flaws in man's knowledge lead to flaws in man's reality. That type of perfection can only be achieved by something that posesses no consciousness or (posesses) infinite consciousness..."</li>
-              <li>"...it's the fear that the human phenomenon is fundamentally devoid of meaning and purpose...the belief that nature is quantifiable leads to the hypothetical conclusion that humanity can also be reduced to simple mechanical components."</li>
-              <li>"The human body is a machine which winds it's own springs."</li>
-              <li>"There are few who can hold up a mirror and not become evil. A mirror does not expose evil. Rather, it creates it...In short, mirrors ought to be merely glanced at, not stared at." </li>
-            </ul>
-        </ol>
+        
+      </section>
+      <section>
+        <h2>Neuroscience</h2>
       </section>
     <section id="img1"> 
       <img src="img/humanityMind.jpg">
